# tradero

./: .gitignore  bot_trading.py  how v0.1.1  pyproject.toml
examples/: gap_handling_example.py  test_gap_handling.py
src/test/: playground.ipynb
src/tradero/: __init__.py  _util.py  color.py  core.py  lib.py  models.py  plotting.py  risk.py  stats.py  util.py
src/tradero/backtesting/: __init__.py  backtesting.py  nb.py
src/tradero/config/: custom_log_color_theme copy.json  custom_log_color_theme.json  log_theme_strategy.json  log_theme_strategy_2.json  logs_format.py
src/tradero/live/: __init__.py  live.py
src/tradero/live/brokers/: mt5.py
src/tradero/live/exchanges/: bybit.py
src/tradero/ta/: __init__.py  indicators.py
src/tradero/test/: __init__.py  backtest_test_strategy.html  backtest_test_strategy.py  live_test_strategy.py  test_main.py
src/tradero/test/data/: ADAUSDT_1m_2025_JUNE.csv  BTCUSDT_1m_2025_JUNE.csv  MESZ25_1m_2025_OCT.csv
