[project]
name = "tradero"
version = "0.4.4"
description = "Framework completo de trading algorítmico con backtesting, trading en vivo, indicadores técnicos personalizados y herramientas avanzadas de gestión de riesgo"
readme = "README.md"
authors = [
    { name = "michiTrader", email = "iden.c63@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "bokeh>=3.8.0",
    "ipykernel>=6.30.1",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "pathlib>=1.0.1",
    "pintar",
    "pybit>=5.11.0",
    "pytest>=8.4.2",
    "python-telegram-bot>=22.4",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
pintar = { git = "https://github.com/michiTrader/pintar.git" }



